# Todo-List-API

./: pyproject.toml  run.py
app/: __init__.py  extensions.py
app/api/v1/endpoint/: auth.py  todo.py
app/api/v1/schema/: auth.py  todo.py
app/models/: basemodel.py  todo.py  user.py
app/persistence/: repository.py
app/service/: __init__.py  facade.py
